<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>GrowNext</artifactId>
    <version>1.0-SNAPSHOT</version>
    <build>
          <plugins>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-compiler-plugin</artifactId>
                  <version>3.8.0</version>
                  <configuration>
                      <source>7</source>
                      <target>7</target>
                  </configuration>
              </plugin>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-surefire-plugin</artifactId>
                  <version>3.0.0-M4</version>
                  <configuration>
                      <forkCount>4</forkCount>
                      <reuseForks>true</reuseForks>
                      <properties>
                          <property>
<!--                              <parallel>all</parallel>-->
<!--                              <threadCount>4</threadCount>-->
<!--                              <name>dataproviderthreadcount</name>-->
<!--                              <value>4</value>-->
                          </property>
                      </properties>
                  </configuration>

              </plugin>
          </plugins>
      </build>

   <!-- Allure test results
        <properties>
           <aspectj.version>1.8.10</aspectj.version>
       </properties>

       <build>
           <plugins>
               <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-surefire-plugin</artifactId>
                   <version>2.20</version>
                   <configuration>
                       <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                       <systemProperties>
                           <property>
                               <name>allure.results.directory</name>
                               <value>${project.build.directory}/allure-results</value>
                           </property>
                       </systemProperties>
                       <includes>
                           <include>**/runner.class</include>
                       </includes>
                   </configuration>
                   <dependencies>
                       <dependency>
                           <groupId>org.aspectj</groupId>
                           <artifactId>aspectjweaver</artifactId>
                           <version>1.9.5</version>
                       </dependency>
                   </dependencies>
               </plugin>

               <plugin>
                   <groupId>io.qameta.allure</groupId>
                   <artifactId>allure-maven</artifactId>
                   <version>2.10.0</version>
                   <configuration>
                       <reportVersion>2.7.0</reportVersion>
                   </configuration>
               </plugin>
               <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-compiler-plugin</artifactId>
                   <version>3.8.0</version>
                   <configuration>
                       <source>7</source>
                       <target>7</target>
                   </configuration>
               </plugin>
           </plugins>
       </build>
-->

       <dependencies>

           <dependency>
               <groupId>org.testng</groupId>
               <artifactId>testng</artifactId>
               <version>6.14.3</version>
               <scope>test</scope>
           </dependency>

           <!-- CUCUMBER -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>4.8.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-picocontainer</artifactId>
            <version>4.8.0</version>
            <scope>test</scope>
        </dependency>

           <!-- run in parallel
              <dependency>
                  <groupId>io.cucumber</groupId>
                  <artifactId>cucumber-java</artifactId>
                  <version>5.4.0</version>
                  <scope>test</scope>
              </dependency>-->




        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.14.0</version>
        </dependency>

        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>3.7.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.28</version>
        </dependency>

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.16</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber4-jvm
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-cucumber-jvm</artifactId>
            <version>2.0-BETA6</version>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>2.6.0</version>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>1.8.10</version>
        </dependency>-->



    </dependencies>


</project>